# guile-oauth

./: .gitignore  AUTHORS  Makefile.am  NEWS  README.md  README.org  TODO  configure.ac  env.in
.github/workflows/: guile2.2.yml  guile3.0.yml
examples/: Makefile.am  twitter.scm
examples/oauth1/: twitter.scm
examples/oauth2/: reddit.scm
oauth/: Makefile.am  oauth1.scm  oauth2.scm  request.scm  utils.scm
oauth/hashing/: Makefile.am  fixnums.scm  sha-1.scm
oauth/industria/: LICENSE.txt  Makefile.am  base64.scm
oauth/oauth1/: Makefile.am  client.scm  credentials.scm  oauth.scm  request.scm  response.scm  service.scm  signature.scm  token.scm  utils.scm
oauth/oauth2/: Makefile.am  client.scm  request.scm  response.scm
oauth/utils/: Makefile.am  base64.scm  sha-1.scm
